k8s-webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook
spec:
  #副本数量 3
  replicas: 3
  selector:
    matchLabels:
      app: webook
# template描述的是你的pod是什么样的
  template:
    metadata:
      labels:
        app: webook
  #Pod的具体信息
    spec:
      containers:
        - name: webook
          image: flycash/webook:v0.0.1
          ports:
            - containerPort: 8080
