k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
spec:
  ingressClassName: nginx
  rules:
    #host是live.webook.com 命中我这条
    - host: live.webook.com
      http:
        paths:
          #请求路径的前缀是 /的时候
          #将流量转发到 webook 服务上 （k8s-webook-service.yaml中定义的metadata服名）
          #端口是80（k8s-webook-service.yaml中定义）
          - backend:
              service:
                name: webook
                port:
                  number: 80
            pathType: Prefix
            path: /
